--- a/public/html/usuario/formulario-usuario-login.html
+++ b/public/html/usuario/formulario-usuario-login.html
@@ -2,13 +2,13 @@
 <html>
 	<title>Login</title>
 	
-	<div >
-	<h1 >SISTEMA DE EXAMENES EN LA <br>
-	UNIVERSIDAD POLITÉCNICA DE ATLACOMULCO</h1>	
+	<div id="title">
+	<center><h1 id="system">SISTEMA DE EXAMENES EN LA <br>
+	NIVERSIDAD POLITÉCNICA DE ATLACOMULCO</h1>	</center>
 	</div>
 	<style>
 	
-	
+
 	</style>
 
 	<body>
